# opencv_contrib

modules/julia/: CMakeLists.txt
modules/julia/cmake/: init.cmake
modules/julia/package/OpenCV/src/: OpenCV.jl  cv_wrap.jl
modules/julia/src/: cv2.cpp
